// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopologyView should display an empty topology correctly 1`] = `
<div>
  <div
    class="pf-l-stack my-test-class"
    id="simple-test-id"
  >
    <div
      class="pf-l-stack__item pf-m-fill pf-topology-container"
    >
      <div
        class="pf-topology-content"
      />
    </div>
  </div>
</div>
`;

exports[`TopologyView should display resizable topology sidebar correctly 1`] = `
<TopologyView
  className="my-test-class"
  contextToolbar={
    <div
      id="test-context-bar"
    />
  }
  controlBar={
    <div
      id="test-control-bar"
    />
  }
  id="simple-test-id"
  sideBar={
    <div>
      Test SideBar
    </div>
  }
  sideBarOpen={false}
  sideBarResizable={true}
  viewToolbar={
    <div
      id="test-view-bar"
    />
  }
>
  <Stack
    className="my-test-class"
    id="simple-test-id"
  >
    <div
      className="pf-l-stack my-test-class"
      id="simple-test-id"
    >
      <StackItem
        isFilled={false}
      >
        <div
          className="pf-l-stack__item"
        >
          <GenerateId
            prefix="pf-topology-view-"
          >
            <Toolbar
              id="pf-topology-view-3"
            >
              <div
                className="pf-c-toolbar"
                data-ouia-component-id="OUIA-Generated-Toolbar-4"
                data-ouia-component-type="PF4/Toolbar"
                data-ouia-safe={true}
                id="pf-topology-view-3"
              >
                <ToolbarContent
                  isExpanded={false}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content"
                  >
                    <div
                      className="pf-c-toolbar__content-section"
                    >
                      <ForwardRef
                        className="pf-topology-view__project-toolbar"
                      >
                        <ToolbarGroupWithRef
                          className="pf-topology-view__project-toolbar"
                          innerRef={null}
                        >
                          <div
                            className="pf-c-toolbar__group pf-topology-view__project-toolbar"
                          >
                            <div
                              id="test-context-bar"
                            />
                          </div>
                        </ToolbarGroupWithRef>
                      </ForwardRef>
                    </div>
                    <ToolbarExpandableContent
                      chipContainerRef={
                        Object {
                          "current": null,
                        }
                      }
                      clearFiltersButtonText="Clear all filters"
                      expandableContentRef={
                        Object {
                          "current": <div
                            class="pf-c-toolbar__expandable-content"
                            id="pf-topology-view-3-expandable-content-6"
                          >
                            <div
                              class="pf-c-toolbar__group"
                            />
                          </div>,
                        }
                      }
                      id="pf-topology-view-3-expandable-content-6"
                      isExpanded={false}
                      showClearFiltersButton={false}
                    >
                      <div
                        className="pf-c-toolbar__expandable-content"
                        id="pf-topology-view-3-expandable-content-6"
                      >
                        <ForwardRef>
                          <ToolbarGroupWithRef
                            innerRef={null}
                          >
                            <div
                              className="pf-c-toolbar__group"
                            />
                          </ToolbarGroupWithRef>
                        </ForwardRef>
                      </div>
                    </ToolbarExpandableContent>
                  </div>
                </ToolbarContent>
                <ToolbarContent
                  isExpanded={false}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content"
                  >
                    <div
                      className="pf-c-toolbar__content-section"
                    >
                      <ForwardRef
                        className="pf-topology-view__view-toolbar"
                      >
                        <ToolbarGroupWithRef
                          className="pf-topology-view__view-toolbar"
                          innerRef={null}
                        >
                          <div
                            className="pf-c-toolbar__group pf-topology-view__view-toolbar"
                          >
                            <div
                              id="test-view-bar"
                            />
                          </div>
                        </ToolbarGroupWithRef>
                      </ForwardRef>
                    </div>
                    <ToolbarExpandableContent
                      chipContainerRef={
                        Object {
                          "current": null,
                        }
                      }
                      clearFiltersButtonText="Clear all filters"
                      expandableContentRef={
                        Object {
                          "current": <div
                            class="pf-c-toolbar__expandable-content"
                            id="pf-topology-view-3-expandable-content-7"
                          >
                            <div
                              class="pf-c-toolbar__group"
                            />
                          </div>,
                        }
                      }
                      id="pf-topology-view-3-expandable-content-7"
                      isExpanded={false}
                      showClearFiltersButton={false}
                    >
                      <div
                        className="pf-c-toolbar__expandable-content"
                        id="pf-topology-view-3-expandable-content-7"
                      >
                        <ForwardRef>
                          <ToolbarGroupWithRef
                            innerRef={null}
                          >
                            <div
                              className="pf-c-toolbar__group"
                            />
                          </ToolbarGroupWithRef>
                        </ForwardRef>
                      </div>
                    </ToolbarExpandableContent>
                  </div>
                </ToolbarContent>
                <Divider>
                  <hr
                    className="pf-c-divider"
                  />
                </Divider>
                <ToolbarChipGroupContent
                  chipGroupContentRef={
                    Object {
                      "current": <div
                        class="pf-c-toolbar__content pf-m-hidden"
                        hidden=""
                      >
                        <div
                          class="pf-c-toolbar__group"
                        />
                      </div>,
                    }
                  }
                  clearFiltersButtonText="Clear all filters"
                  collapseListedFiltersBreakpoint="lg"
                  isExpanded={false}
                  numberOfFilters={0}
                  numberOfFiltersText={[Function]}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content pf-m-hidden"
                    hidden={true}
                  >
                    <ForwardRef
                      className=""
                    >
                      <ToolbarGroupWithRef
                        className=""
                        innerRef={null}
                      >
                        <div
                          className="pf-c-toolbar__group"
                        />
                      </ToolbarGroupWithRef>
                    </ForwardRef>
                  </div>
                </ToolbarChipGroupContent>
              </div>
            </Toolbar>
          </GenerateId>
        </div>
      </StackItem>
      <StackItem
        className="pf-topology-container"
        isFilled={true}
      >
        <div
          className="pf-l-stack__item pf-m-fill pf-topology-container"
        >
          <Drawer
            isExpanded={false}
            isInline={true}
          >
            <div
              className="pf-c-drawer pf-m-inline"
            >
              <DrawerContent
                panelContent={
                  <DrawerPanelContent
                    defaultSize="500px"
                    id="topology-resize-panel"
                    isResizable={true}
                    maxSize="100%"
                    minSize="150px"
                  >
                    <div>
                      Test SideBar
                    </div>
                  </DrawerPanelContent>
                }
              >
                <DrawerMain>
                  <div
                    className="pf-c-drawer__main"
                  >
                    <div
                      className="pf-c-drawer__content"
                    >
                      <DrawerContentBody>
                        <div
                          className="pf-c-drawer__body"
                        >
                          <div
                            className="pf-topology-content"
                          >
                            <div
                              id="test-canvas"
                            />
                            <span
                              className="pf-topology-control-bar"
                            >
                              <div
                                id="test-control-bar"
                              />
                            </span>
                          </div>
                        </div>
                      </DrawerContentBody>
                    </div>
                    <DrawerPanelContent
                      defaultSize="500px"
                      id="topology-resize-panel"
                      isResizable={true}
                      maxSize="100%"
                      minSize="150px"
                    >
                      <div
                        className="pf-c-drawer__panel pf-m-resizable"
                        hidden={true}
                        id="topology-resize-panel"
                        onTransitionEnd={[Function]}
                        style={
                          Object {
                            "--pf-c-drawer__panel--md--FlexBasis": "500px",
                            "--pf-c-drawer__panel--md--FlexBasis--max": "100%",
                            "--pf-c-drawer__panel--md--FlexBasis--min": "150px",
                          }
                        }
                      />
                    </DrawerPanelContent>
                  </div>
                </DrawerMain>
              </DrawerContent>
            </div>
          </Drawer>
        </div>
      </StackItem>
    </div>
  </Stack>
</TopologyView>
`;

exports[`TopologyView should display topology correctly 1`] = `
<div>
  <div
    class="pf-l-stack my-test-class"
    id="simple-test-id"
  >
    <div
      class="pf-l-stack__item"
    >
      <div
        class="pf-c-toolbar"
        data-ouia-component-id="OUIA-Generated-Toolbar-1"
        data-ouia-component-type="PF4/Toolbar"
        data-ouia-safe="true"
        id="pf-topology-view-0"
      >
        <div
          class="pf-c-toolbar__content"
        >
          <div
            class="pf-c-toolbar__content-section"
          >
            <div
              class="pf-c-toolbar__group pf-topology-view__project-toolbar"
            >
              <div
                id="test-context-bar"
              />
            </div>
          </div>
          <div
            class="pf-c-toolbar__expandable-content"
            id="pf-topology-view-0-expandable-content-0"
          >
            <div
              class="pf-c-toolbar__group"
            />
          </div>
        </div>
        <div
          class="pf-c-toolbar__content"
        >
          <div
            class="pf-c-toolbar__content-section"
          >
            <div
              class="pf-c-toolbar__group pf-topology-view__view-toolbar"
            >
              <div
                id="test-view-bar"
              />
            </div>
          </div>
          <div
            class="pf-c-toolbar__expandable-content"
            id="pf-topology-view-0-expandable-content-1"
          >
            <div
              class="pf-c-toolbar__group"
            />
          </div>
        </div>
        <hr
          class="pf-c-divider"
        />
        <div
          class="pf-c-toolbar__content pf-m-hidden"
          hidden=""
        >
          <div
            class="pf-c-toolbar__group"
          />
        </div>
      </div>
    </div>
    <div
      class="pf-l-stack__item pf-m-fill pf-topology-container"
    >
      <div
        class="pf-topology-content"
      >
        <div
          id="test-canvas"
        />
        <span
          class="pf-topology-control-bar"
        >
          <div
            id="test-control-bar"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TopologyView should display topology sidebar correctly 1`] = `
<TopologyView
  className="my-test-class"
  contextToolbar={
    <div
      id="test-context-bar"
    />
  }
  controlBar={
    <div
      id="test-control-bar"
    />
  }
  id="simple-test-id"
  sideBar={
    <div>
      Test SideBar
    </div>
  }
  sideBarOpen={false}
  viewToolbar={
    <div
      id="test-view-bar"
    />
  }
>
  <Stack
    className="my-test-class"
    id="simple-test-id"
  >
    <div
      className="pf-l-stack my-test-class"
      id="simple-test-id"
    >
      <StackItem
        isFilled={false}
      >
        <div
          className="pf-l-stack__item"
        >
          <GenerateId
            prefix="pf-topology-view-"
          >
            <Toolbar
              id="pf-topology-view-1"
            >
              <div
                className="pf-c-toolbar"
                data-ouia-component-id="OUIA-Generated-Toolbar-2"
                data-ouia-component-type="PF4/Toolbar"
                data-ouia-safe={true}
                id="pf-topology-view-1"
              >
                <ToolbarContent
                  isExpanded={false}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content"
                  >
                    <div
                      className="pf-c-toolbar__content-section"
                    >
                      <ForwardRef
                        className="pf-topology-view__project-toolbar"
                      >
                        <ToolbarGroupWithRef
                          className="pf-topology-view__project-toolbar"
                          innerRef={null}
                        >
                          <div
                            className="pf-c-toolbar__group pf-topology-view__project-toolbar"
                          >
                            <div
                              id="test-context-bar"
                            />
                          </div>
                        </ToolbarGroupWithRef>
                      </ForwardRef>
                    </div>
                    <ToolbarExpandableContent
                      chipContainerRef={
                        Object {
                          "current": null,
                        }
                      }
                      clearFiltersButtonText="Clear all filters"
                      expandableContentRef={
                        Object {
                          "current": <div
                            class="pf-c-toolbar__expandable-content"
                            id="pf-topology-view-1-expandable-content-2"
                          >
                            <div
                              class="pf-c-toolbar__group"
                            />
                          </div>,
                        }
                      }
                      id="pf-topology-view-1-expandable-content-2"
                      isExpanded={false}
                      showClearFiltersButton={false}
                    >
                      <div
                        className="pf-c-toolbar__expandable-content"
                        id="pf-topology-view-1-expandable-content-2"
                      >
                        <ForwardRef>
                          <ToolbarGroupWithRef
                            innerRef={null}
                          >
                            <div
                              className="pf-c-toolbar__group"
                            />
                          </ToolbarGroupWithRef>
                        </ForwardRef>
                      </div>
                    </ToolbarExpandableContent>
                  </div>
                </ToolbarContent>
                <ToolbarContent
                  isExpanded={false}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content"
                  >
                    <div
                      className="pf-c-toolbar__content-section"
                    >
                      <ForwardRef
                        className="pf-topology-view__view-toolbar"
                      >
                        <ToolbarGroupWithRef
                          className="pf-topology-view__view-toolbar"
                          innerRef={null}
                        >
                          <div
                            className="pf-c-toolbar__group pf-topology-view__view-toolbar"
                          >
                            <div
                              id="test-view-bar"
                            />
                          </div>
                        </ToolbarGroupWithRef>
                      </ForwardRef>
                    </div>
                    <ToolbarExpandableContent
                      chipContainerRef={
                        Object {
                          "current": null,
                        }
                      }
                      clearFiltersButtonText="Clear all filters"
                      expandableContentRef={
                        Object {
                          "current": <div
                            class="pf-c-toolbar__expandable-content"
                            id="pf-topology-view-1-expandable-content-3"
                          >
                            <div
                              class="pf-c-toolbar__group"
                            />
                          </div>,
                        }
                      }
                      id="pf-topology-view-1-expandable-content-3"
                      isExpanded={false}
                      showClearFiltersButton={false}
                    >
                      <div
                        className="pf-c-toolbar__expandable-content"
                        id="pf-topology-view-1-expandable-content-3"
                      >
                        <ForwardRef>
                          <ToolbarGroupWithRef
                            innerRef={null}
                          >
                            <div
                              className="pf-c-toolbar__group"
                            />
                          </ToolbarGroupWithRef>
                        </ForwardRef>
                      </div>
                    </ToolbarExpandableContent>
                  </div>
                </ToolbarContent>
                <Divider>
                  <hr
                    className="pf-c-divider"
                  />
                </Divider>
                <ToolbarChipGroupContent
                  chipGroupContentRef={
                    Object {
                      "current": <div
                        class="pf-c-toolbar__content pf-m-hidden"
                        hidden=""
                      >
                        <div
                          class="pf-c-toolbar__group"
                        />
                      </div>,
                    }
                  }
                  clearFiltersButtonText="Clear all filters"
                  collapseListedFiltersBreakpoint="lg"
                  isExpanded={false}
                  numberOfFilters={0}
                  numberOfFiltersText={[Function]}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content pf-m-hidden"
                    hidden={true}
                  >
                    <ForwardRef
                      className=""
                    >
                      <ToolbarGroupWithRef
                        className=""
                        innerRef={null}
                      >
                        <div
                          className="pf-c-toolbar__group"
                        />
                      </ToolbarGroupWithRef>
                    </ForwardRef>
                  </div>
                </ToolbarChipGroupContent>
              </div>
            </Toolbar>
          </GenerateId>
        </div>
      </StackItem>
      <StackItem
        className="pf-topology-container pf-topology-container__with-sidebar"
        isFilled={true}
      >
        <div
          className="pf-l-stack__item pf-m-fill pf-topology-container pf-topology-container__with-sidebar"
        >
          <div
            className="pf-topology-content"
          >
            <div
              id="test-canvas"
            />
            <span
              className="pf-topology-control-bar"
            >
              <div
                id="test-control-bar"
              />
            </span>
          </div>
          <div>
            Test SideBar
          </div>
        </div>
      </StackItem>
    </div>
  </Stack>
</TopologyView>
`;

exports[`TopologyView should display topology w/ open resizable sidebar correctly 1`] = `
<TopologyView
  className="my-test-class"
  contextToolbar={
    <div
      id="test-context-bar"
    />
  }
  controlBar={
    <div
      id="test-control-bar"
    />
  }
  id="simple-test-id"
  sideBar={
    <div>
      Test SideBar
    </div>
  }
  sideBarOpen={true}
  sideBarResizable={true}
  viewToolbar={
    <div
      id="test-view-bar"
    />
  }
>
  <Stack
    className="my-test-class"
    id="simple-test-id"
  >
    <div
      className="pf-l-stack my-test-class"
      id="simple-test-id"
    >
      <StackItem
        isFilled={false}
      >
        <div
          className="pf-l-stack__item"
        >
          <GenerateId
            prefix="pf-topology-view-"
          >
            <Toolbar
              id="pf-topology-view-4"
            >
              <div
                className="pf-c-toolbar"
                data-ouia-component-id="OUIA-Generated-Toolbar-5"
                data-ouia-component-type="PF4/Toolbar"
                data-ouia-safe={true}
                id="pf-topology-view-4"
              >
                <ToolbarContent
                  isExpanded={false}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content"
                  >
                    <div
                      className="pf-c-toolbar__content-section"
                    >
                      <ForwardRef
                        className="pf-topology-view__project-toolbar"
                      >
                        <ToolbarGroupWithRef
                          className="pf-topology-view__project-toolbar"
                          innerRef={null}
                        >
                          <div
                            className="pf-c-toolbar__group pf-topology-view__project-toolbar"
                          >
                            <div
                              id="test-context-bar"
                            />
                          </div>
                        </ToolbarGroupWithRef>
                      </ForwardRef>
                    </div>
                    <ToolbarExpandableContent
                      chipContainerRef={
                        Object {
                          "current": null,
                        }
                      }
                      clearFiltersButtonText="Clear all filters"
                      expandableContentRef={
                        Object {
                          "current": <div
                            class="pf-c-toolbar__expandable-content"
                            id="pf-topology-view-4-expandable-content-8"
                          >
                            <div
                              class="pf-c-toolbar__group"
                            />
                          </div>,
                        }
                      }
                      id="pf-topology-view-4-expandable-content-8"
                      isExpanded={false}
                      showClearFiltersButton={false}
                    >
                      <div
                        className="pf-c-toolbar__expandable-content"
                        id="pf-topology-view-4-expandable-content-8"
                      >
                        <ForwardRef>
                          <ToolbarGroupWithRef
                            innerRef={null}
                          >
                            <div
                              className="pf-c-toolbar__group"
                            />
                          </ToolbarGroupWithRef>
                        </ForwardRef>
                      </div>
                    </ToolbarExpandableContent>
                  </div>
                </ToolbarContent>
                <ToolbarContent
                  isExpanded={false}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content"
                  >
                    <div
                      className="pf-c-toolbar__content-section"
                    >
                      <ForwardRef
                        className="pf-topology-view__view-toolbar"
                      >
                        <ToolbarGroupWithRef
                          className="pf-topology-view__view-toolbar"
                          innerRef={null}
                        >
                          <div
                            className="pf-c-toolbar__group pf-topology-view__view-toolbar"
                          >
                            <div
                              id="test-view-bar"
                            />
                          </div>
                        </ToolbarGroupWithRef>
                      </ForwardRef>
                    </div>
                    <ToolbarExpandableContent
                      chipContainerRef={
                        Object {
                          "current": null,
                        }
                      }
                      clearFiltersButtonText="Clear all filters"
                      expandableContentRef={
                        Object {
                          "current": <div
                            class="pf-c-toolbar__expandable-content"
                            id="pf-topology-view-4-expandable-content-9"
                          >
                            <div
                              class="pf-c-toolbar__group"
                            />
                          </div>,
                        }
                      }
                      id="pf-topology-view-4-expandable-content-9"
                      isExpanded={false}
                      showClearFiltersButton={false}
                    >
                      <div
                        className="pf-c-toolbar__expandable-content"
                        id="pf-topology-view-4-expandable-content-9"
                      >
                        <ForwardRef>
                          <ToolbarGroupWithRef
                            innerRef={null}
                          >
                            <div
                              className="pf-c-toolbar__group"
                            />
                          </ToolbarGroupWithRef>
                        </ForwardRef>
                      </div>
                    </ToolbarExpandableContent>
                  </div>
                </ToolbarContent>
                <Divider>
                  <hr
                    className="pf-c-divider"
                  />
                </Divider>
                <ToolbarChipGroupContent
                  chipGroupContentRef={
                    Object {
                      "current": <div
                        class="pf-c-toolbar__content pf-m-hidden"
                        hidden=""
                      >
                        <div
                          class="pf-c-toolbar__group"
                        />
                      </div>,
                    }
                  }
                  clearFiltersButtonText="Clear all filters"
                  collapseListedFiltersBreakpoint="lg"
                  isExpanded={false}
                  numberOfFilters={0}
                  numberOfFiltersText={[Function]}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content pf-m-hidden"
                    hidden={true}
                  >
                    <ForwardRef
                      className=""
                    >
                      <ToolbarGroupWithRef
                        className=""
                        innerRef={null}
                      >
                        <div
                          className="pf-c-toolbar__group"
                        />
                      </ToolbarGroupWithRef>
                    </ForwardRef>
                  </div>
                </ToolbarChipGroupContent>
              </div>
            </Toolbar>
          </GenerateId>
        </div>
      </StackItem>
      <StackItem
        className="pf-topology-container"
        isFilled={true}
      >
        <div
          className="pf-l-stack__item pf-m-fill pf-topology-container"
        >
          <Drawer
            isExpanded={true}
            isInline={true}
          >
            <div
              className="pf-c-drawer pf-m-expanded pf-m-inline"
            >
              <DrawerContent
                panelContent={
                  <DrawerPanelContent
                    defaultSize="500px"
                    id="topology-resize-panel"
                    isResizable={true}
                    maxSize="100%"
                    minSize="150px"
                  >
                    <div>
                      Test SideBar
                    </div>
                  </DrawerPanelContent>
                }
              >
                <DrawerMain>
                  <div
                    className="pf-c-drawer__main"
                  >
                    <div
                      className="pf-c-drawer__content"
                    >
                      <DrawerContentBody>
                        <div
                          className="pf-c-drawer__body"
                        >
                          <div
                            className="pf-topology-content"
                          >
                            <div
                              id="test-canvas"
                            />
                            <span
                              className="pf-topology-control-bar"
                            >
                              <div
                                id="test-control-bar"
                              />
                            </span>
                          </div>
                        </div>
                      </DrawerContentBody>
                    </div>
                    <DrawerPanelContent
                      defaultSize="500px"
                      id="topology-resize-panel"
                      isResizable={true}
                      maxSize="100%"
                      minSize="150px"
                    >
                      <div
                        className="pf-c-drawer__panel pf-m-resizable"
                        hidden={false}
                        id="topology-resize-panel"
                        onTransitionEnd={[Function]}
                        style={
                          Object {
                            "--pf-c-drawer__panel--md--FlexBasis": "500px",
                            "--pf-c-drawer__panel--md--FlexBasis--max": "100%",
                            "--pf-c-drawer__panel--md--FlexBasis--min": "150px",
                          }
                        }
                      >
                        <div
                          aria-describedby="Press space to begin resizing, and use the arrow keys to grow or shrink the panel. Press enter or escape to finish resizing."
                          aria-label="Resize"
                          aria-orientation="vertical"
                          className="pf-c-drawer__splitter pf-m-vertical"
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          onTouchStart={[Function]}
                          role="separator"
                          tabIndex={0}
                        >
                          <div
                            aria-hidden={true}
                            className="pf-c-drawer__splitter-handle"
                          />
                        </div>
                        <div
                          className="pf-c-drawer__panel-main"
                        >
                          <div>
                            Test SideBar
                          </div>
                        </div>
                      </div>
                    </DrawerPanelContent>
                  </div>
                </DrawerMain>
              </DrawerContent>
            </div>
          </Drawer>
        </div>
      </StackItem>
    </div>
  </Stack>
</TopologyView>
`;

exports[`TopologyView should display topology w/ open sidebar correctly 1`] = `
<TopologyView
  className="my-test-class"
  contextToolbar={
    <div
      id="test-context-bar"
    />
  }
  controlBar={
    <div
      id="test-control-bar"
    />
  }
  id="simple-test-id"
  sideBar={
    <div>
      Test SideBar
    </div>
  }
  sideBarOpen={true}
  viewToolbar={
    <div
      id="test-view-bar"
    />
  }
>
  <Stack
    className="my-test-class"
    id="simple-test-id"
  >
    <div
      className="pf-l-stack my-test-class"
      id="simple-test-id"
    >
      <StackItem
        isFilled={false}
      >
        <div
          className="pf-l-stack__item"
        >
          <GenerateId
            prefix="pf-topology-view-"
          >
            <Toolbar
              id="pf-topology-view-2"
            >
              <div
                className="pf-c-toolbar"
                data-ouia-component-id="OUIA-Generated-Toolbar-3"
                data-ouia-component-type="PF4/Toolbar"
                data-ouia-safe={true}
                id="pf-topology-view-2"
              >
                <ToolbarContent
                  isExpanded={false}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content"
                  >
                    <div
                      className="pf-c-toolbar__content-section"
                    >
                      <ForwardRef
                        className="pf-topology-view__project-toolbar"
                      >
                        <ToolbarGroupWithRef
                          className="pf-topology-view__project-toolbar"
                          innerRef={null}
                        >
                          <div
                            className="pf-c-toolbar__group pf-topology-view__project-toolbar"
                          >
                            <div
                              id="test-context-bar"
                            />
                          </div>
                        </ToolbarGroupWithRef>
                      </ForwardRef>
                    </div>
                    <ToolbarExpandableContent
                      chipContainerRef={
                        Object {
                          "current": null,
                        }
                      }
                      clearFiltersButtonText="Clear all filters"
                      expandableContentRef={
                        Object {
                          "current": <div
                            class="pf-c-toolbar__expandable-content"
                            id="pf-topology-view-2-expandable-content-4"
                          >
                            <div
                              class="pf-c-toolbar__group"
                            />
                          </div>,
                        }
                      }
                      id="pf-topology-view-2-expandable-content-4"
                      isExpanded={false}
                      showClearFiltersButton={false}
                    >
                      <div
                        className="pf-c-toolbar__expandable-content"
                        id="pf-topology-view-2-expandable-content-4"
                      >
                        <ForwardRef>
                          <ToolbarGroupWithRef
                            innerRef={null}
                          >
                            <div
                              className="pf-c-toolbar__group"
                            />
                          </ToolbarGroupWithRef>
                        </ForwardRef>
                      </div>
                    </ToolbarExpandableContent>
                  </div>
                </ToolbarContent>
                <ToolbarContent
                  isExpanded={false}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content"
                  >
                    <div
                      className="pf-c-toolbar__content-section"
                    >
                      <ForwardRef
                        className="pf-topology-view__view-toolbar"
                      >
                        <ToolbarGroupWithRef
                          className="pf-topology-view__view-toolbar"
                          innerRef={null}
                        >
                          <div
                            className="pf-c-toolbar__group pf-topology-view__view-toolbar"
                          >
                            <div
                              id="test-view-bar"
                            />
                          </div>
                        </ToolbarGroupWithRef>
                      </ForwardRef>
                    </div>
                    <ToolbarExpandableContent
                      chipContainerRef={
                        Object {
                          "current": null,
                        }
                      }
                      clearFiltersButtonText="Clear all filters"
                      expandableContentRef={
                        Object {
                          "current": <div
                            class="pf-c-toolbar__expandable-content"
                            id="pf-topology-view-2-expandable-content-5"
                          >
                            <div
                              class="pf-c-toolbar__group"
                            />
                          </div>,
                        }
                      }
                      id="pf-topology-view-2-expandable-content-5"
                      isExpanded={false}
                      showClearFiltersButton={false}
                    >
                      <div
                        className="pf-c-toolbar__expandable-content"
                        id="pf-topology-view-2-expandable-content-5"
                      >
                        <ForwardRef>
                          <ToolbarGroupWithRef
                            innerRef={null}
                          >
                            <div
                              className="pf-c-toolbar__group"
                            />
                          </ToolbarGroupWithRef>
                        </ForwardRef>
                      </div>
                    </ToolbarExpandableContent>
                  </div>
                </ToolbarContent>
                <Divider>
                  <hr
                    className="pf-c-divider"
                  />
                </Divider>
                <ToolbarChipGroupContent
                  chipGroupContentRef={
                    Object {
                      "current": <div
                        class="pf-c-toolbar__content pf-m-hidden"
                        hidden=""
                      >
                        <div
                          class="pf-c-toolbar__group"
                        />
                      </div>,
                    }
                  }
                  clearFiltersButtonText="Clear all filters"
                  collapseListedFiltersBreakpoint="lg"
                  isExpanded={false}
                  numberOfFilters={0}
                  numberOfFiltersText={[Function]}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content pf-m-hidden"
                    hidden={true}
                  >
                    <ForwardRef
                      className=""
                    >
                      <ToolbarGroupWithRef
                        className=""
                        innerRef={null}
                      >
                        <div
                          className="pf-c-toolbar__group"
                        />
                      </ToolbarGroupWithRef>
                    </ForwardRef>
                  </div>
                </ToolbarChipGroupContent>
              </div>
            </Toolbar>
          </GenerateId>
        </div>
      </StackItem>
      <StackItem
        className="pf-topology-container pf-topology-container__with-sidebar pf-topology-container__with-sidebar--open"
        isFilled={true}
      >
        <div
          className="pf-l-stack__item pf-m-fill pf-topology-container pf-topology-container__with-sidebar pf-topology-container__with-sidebar--open"
        >
          <div
            className="pf-topology-content"
          >
            <div
              id="test-canvas"
            />
            <span
              className="pf-topology-control-bar"
            >
              <div
                id="test-control-bar"
              />
            </span>
          </div>
          <div>
            Test SideBar
          </div>
        </div>
      </StackItem>
    </div>
  </Stack>
</TopologyView>
`;
